--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/Gyozmo/spotify#readme",
   "dependencies": {
-    "gulp": "^3.9.1"
+    "browser-sync": "^2.24.5",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^4.0.1"
   }
 }
