--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.2.1",
     "gulp-sass": "^4.0.1"
   }
 }
